# demo-lambda-cdk

./: .coveragerc  .gitignore  NOTES.md  app.py  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
infra/: infra_stack.py
src/: main.py  pyproject.toml
tests/unit/: test_infra_stack.py
tests/unit/snapshots/test_infra_stack/test_snapshot/: InfraStack.json
