[tool.poetry]
name = "demo_lambda"
version = "0.1.0"
description = "a thingy"
authors = ["Jyrki Ahpola <jahpola@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
